# scan-detection-yolo

./: .gitignore  2Dvisualize.py  3Dvisualize.py  DETECT.bat  evaluate.py  history.json  inference.py  kmeans.py  prepare.py  train.py  visualize.py  xml_to_txt.py  xmltxt.py
hiro_visualizer/: CMakeLists.txt  CMakeSettings.json  HIROVisualizer.bxproj  main.cpp
hiro_visualizer/HIRO/include/COGS/: API.h  AabbHierarchy.h  Armature.h  Bone.h  BoneTransform.h  C_PointCloud.h  C_Scan.h  Color.h  DataType.h  DynamicScan.h  ExportBVH.h  Exporter.h  Frustum.h  Grid.h  Image.h  Importer.h  Interpolator.h  KdTree.h  MaterialModel.h  Mesh.h  MeshOperations.h  MetaData.h  MetaDataSerializer.h  Octree.h  PointCloud.h  PointCloudProperty.h  PointCloudSelector.h  ScalePreservingTransform.h  ScalePreservingTransformSerializer.h  Scan.h  ScanCameraParams.h  Skeleton.h  SkeletonAction.h  SkeletonPose.h  Table.h  Transform.h  Triangulation.h  Version.h
hiro_visualizer/HIRO/include/COGS/Conversions/: PclConversions.h
hiro_visualizer/HIRO/include/COGS/io/: DataBlock.h  DataBlockExporter.h  DataBlockImporter.h  DataBlockManager.h
hiro_visualizer/HIRO/include/GEOM/: API.h  Constructors.h  Depricated.h  Filtering.h  Geometry.h  Graphs.h  MeshSimplification.h  Meshes.h  Procedural.h  Quadrics.h  Remapping.h  Triangulation.h  Version.h
hiro_visualizer/HIRO/include/GLW/: API.h  ArrayObject.h  FrameBuffer.h  ShaderBuild.h  ShaderProgram.h  ShaderProgramList.h  Texture.h  UniformBuffer.h  Utils.h  Version.h  Window.h  WindowEventObserver.h
hiro_visualizer/HIRO/include/GUIP/: API.h  ArrayPanel.h  Combobox.h  Conversions.h  Editbox.h  GuiSystem.h  ListboxTextItem.h  Simplify.h  Spinner.h  StatusIcon.h  WaitCircle.h
hiro_visualizer/HIRO/include/HIRO/: API.h  Camera.h  Debugger.h  Exportable.h  Gadget.h  HIRO.h  Input.h  Resource.h  ResourceId.h
hiro_visualizer/HIRO/include/HIRO/gui/: GuiGenerator.h  GuiHelpers.h  GuiPanel.h  GuiTypes.h
hiro_visualizer/HIRO/include/HIRO/modules/: GeometryGadget.h  GeometryResource.h  GraphResource.h  GuiResource.h  ImageResource.h  MeshResource.h  PointCloudResource.h  ScanResource.h  SkeletonResource.h
hiro_visualizer/HIRO/include/HIRO_DRAW/: API.h  ElementRenderer.h  PrimitiveDatabase.h  RenderSystem.h  Renderer.h  Scene.h  ShaderApi.h  TextRenderer.h  TextureProcessing.h  VisualCamera.h  VisualCameraController.h
hiro_visualizer/HIRO/include/HIRO_DRAW/renderers/: BillboardRenderer.h  CircleRenderer.h  FrustumRenderer.h  GeometryRenderer.h  GraphRenderer.h  ImageRenderer.h  LineFieldRenderer.h  (+5 more)
hiro_visualizer/HIRO/include/Utils/: API.h  AtomicQueue.h  BulletConversions.h  CallbackTimer.h  CheckUserRights.h  ClrThreadHolder.h  ConcurrentBinding.h  Config.h  Couple.h  CvMatToTexture.h  DialogInterface.h  Dialogs.h  Dictionary.h  EigenConversions.h  EnumFlags.h  EventHandler.h  Exceptions.h  ExtCEGUI.h  ExtCv.h  ExtGLM.h  ExtOMP.h  ExtSTD.h  FileTypes.h  Filesystem.h  Functional.h  GTestHelpers.h  GeometryStructures.h  Identifiable.h  IniParser.h  Interval.h  IntrinsicParams.h  LogEntry.h  LogReader.h  LogWriter.h  Logger.h  NamedClass.h  Notifier.h  OnEnd.h  Property.h  ScannerDefinitions.h  (+16 more)
hiro_visualizer/HIRO/lib/Release/: COGS_msvc141_v0.1.0.lib  GEOM_msvc141_v0.1.0.lib  GLW_msvc141_v0.1.0.lib  GUIP_msvc141_v0.1.0.lib  HIRO_DRAW_msvc141_v0.1.0.lib  HIRO_msvc141_v0.4.2.lib  Utils_msvc141_v0.1.0.lib
hiro_visualizer/HIRO/resources/resources/: DarkHiro.imageset  DarkHiro.looknfeel  DarkHiro.scheme  DarkHiroDesign.txt  InriaSans-10-Bold.font  InriaSans-10-Normal.font  InriaSans-12-Normal.font  InriaSans-16-Normal.font  InriaSans-9-Italic.font  InriaSans-9-Normal.font  Project.project  ScreenshotSettings.layout  ViewArea.layout  icons-16px.imageset  icons-18px.imageset
hiro_visualizer/HIRO/resources/shaders/: api_definitions.glsl  api_frag.glsl  api_vert.glsl  copy.frag  fullscreen_quad.vert
(+45 files in other folders)
